********************* * Update 09.10.2023 * ********************* add H2 datasource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,9 @@ server.port=8080
 
 spring.security.user.name=admin
 spring.security.user.password=admin
+
+spring.datasource.url=jdbc:h2:file:./src/main/resources/db/bar_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=su_admin
+spring.datasource.password=@dm1N_pa$$word
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
