--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=su_admin
 spring.datasource.password=@dm1N_pa$$word
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=create-drop
