--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,28 @@
-server.port=8080
+server.port=8443
+
+#security.require-ssl=true
+#server.ssl.key-store=/etc/letsencrypt/live/myscope.online/keystore.p12
+#server.ssl.key-store=./src/main/resources/keystore/keystore.p12
+#trust.store=./src/main/resources/keystore/keystore.p12
+#server.ssl.key-store-password=Admin_123!
+#server.ssl.keyStoreType=PKCS12
+#server.ssl.keyAlias=tomcat
+
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=JKS
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keystore/keystore.jks
+# The password used to generate the certificate
+server.ssl.key-store-password=Admin_123!
+# The alias mapped to the certificate
+server.ssl.key-alias=tomcat
+
+server.ssl.enabled=true
+
+#trust store location
+trust.store=classpath:keystore/keystore.jks
+#trust store password
+trust.store.password=Admin_123!
 
 spring.datasource.url=jdbc:h2:file:./src/main/resources/db/bar_db
 spring.datasource.driverClassName=org.h2.Driver
@@ -7,3 +31,6 @@ spring.datasource.password=@dm1N_pa$$word
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=false
 #spring.jpa.hibernate.ddl-auto=create-drop
+
+bar.login=bar_admin
+bar.password=@dm1N_123!
